Fix incorrect syntax in a template block

--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -11,7 +11,7 @@
 <li class="active">{% translate "ALL_RESULTS" %}</li>
 {% endblock %}
 
-{{% block scripts %}
+{% block scripts %}
 {{ block.super }}
 <!--Library to handle multiselection on select tags-->
 <link rel="stylesheet"
