Set programming language manually for highlight.js
Highlight.js may automatically detect the programming language
whose syntax is highlighted, but the latest version of highlight.js
fails to detect the language correctly more often than expected.

This fix sets the language manually based on the URL file extension.
If the URL does not end with a file extension or highlight.js does not
know the file extension, the language is detected automatically.

Fixes #1221

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,12 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/languages/scala.min.js"
 			integrity="sha512-F7HBSjTYDsAreqced8cggvF5AuB+j2TXktnLYpCrpWF2fhQJJCc5KimR3LYLs0AppTBecbPN9M9Hjf8yC2WstA=="
 			crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/languages/matlab.min.js"
+			integrity="sha512-5ZGiuxBBzpJ0aH15H1I850TRlyLKnJz4oUehftIWUpEGv4k/Yq7Iva5m7yqfLQYjMjZLcQ8eFCkPQR5JL5CUrQ=="
+			crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/languages/dockerfile.min.js"
+			integrity="sha512-f4j2jCLhh6ii5vDz5Zi41dqB8gpf1J3VJfApZSdlZQCzm5X4jmMKRulA0Vlf1CCewroxvKrel6yCCSpiEwFNsA=="
+			crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"
 			integrity="sha512-7O5pXpc0oCRrxk8RUfDYFgn0nO1t+jLuIOQdOMRp4APB7uZ4vSjspzp5y6YDtDs4VzUSTbWzBFZ/LKJhnyFOKw=="
