--- a/assets/sass/protocols/_quiz1.scss
+++ b/assets/sass/protocols/_quiz1.scss
@@ -24,8 +24,10 @@ $questionnaire-focus-bg: #bce8f1;
 		display: block;
 		margin-top: 5px;
 		margin-bottom: 5px;
-		color: #737373;
+		color: #4a4a4a;
 		font-style: normal;
+		background-color: #ffefaa;
+		box-shadow: 0 0 0 3px #ffefaa;
 	}
 
 	.hint-checkbox {
