--- a/templates/403.html
+++ b/templates/403.html
@@ -1,11 +1,19 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% load static %}
-{% load base %}
+
+{% block title %}{% translate "ACCESS_RESTRICTED_403" %} | {{ block.super }}{% endblock %}
+
 {% block content %}
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-8">
+			<div class="page-header">
+				<h1>
+					{% translate "ACCESS_RESTRICTED_403" %}
+					<span class="tiny">(403)</span>
+				</h1>
+			</div>
+			<p>{% translate "ACCESS_RESTRICTED_403_INFO" %}</p>
 		</div>
 	</div>
 </div>
