--- a/templates/500.html
+++ b/templates/500.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>500 Internal server error</title>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    </head>
-    <body>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="page-header">
-                        <h1>500 Internal server error</h1>
-                    </div>
-                    <div class="alert alert-danger">
-                        Something went terribly wrong and we were not able to process your request. Sorry.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </body>
-</html>
+{% extends "base.html" %}
+{% load i18n %}
+
+{% block title %}{% translate "INTERNAL_SERVER_ERROR_500" %} | {{ block.super }}{% endblock %}
+
+{% block content %}
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-8">
+			<div class="page-header">
+				<h1>
+					{% translate "INTERNAL_SERVER_ERROR_500" %}
+					<span class="tiny">(500)</span>
+				</h1>
+			</div>
+			<div class="alert alert-danger">
+				<span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+				{% translate "SOMETHING_WENT_WRONG" %}
+			</div>
+		</div>
+	</div>
+</div>
+{% endblock %}
