--- a/templates/base.html
+++ b/templates/base.html
@@ -235,6 +235,9 @@
 		<main class="site-content container-fluid" id="content">
 			{% endblock %}
 			{% site_alert %}
+			{% if instance %}
+			{% course_alert instance %}
+			{% endif %}
 			{% include "_messages.html" %}
 			{% block content %}
 			<div class="error">
