--- a/deviations/templates/deviations/list_submissions.html
+++ b/deviations/templates/deviations/list_submissions.html
@@ -46,7 +46,7 @@
 				</thead>
 				<tbody>
 					{% translate "UNKNOWN" as unknown %}
-					{% for deviations, can_group, group_id, _ in deviation_groups %}
+					{% for deviations, can_group, group_id, show_granter in deviation_groups %}
 					{% if can_group %}
 					<tr data-group-parent="{{ group_id }}">
 						<td>
@@ -63,8 +63,24 @@
 							</strong>
 						</td>
 						<td>{{ deviations.0.extra_submissions }}</td>
-						<td></td>
-						<td></td>
+						<td>
+							{% if show_granter %}
+								{% if deviations.0.granter %}
+								{{ deviations.0.granter.name_with_student_id }}
+								{% else %}
+								{{ unknown }}
+								{% endif %}
+							{% endif %}
+						</td>
+						<td data-datetime="{{ deviations.0.grant_time|date:'Y-m-d H:i:s' }}">
+							{% if show_granter %}
+								{% if deviations.0.grant_time %}
+								{{ deviations.0.grant_time|date:'SHORT_DATETIME_FORMAT' }}
+								{% else %}
+								{{ unknown }}
+								{% endif %}
+							{% endif %}
+						</td>
 						<td>
 							<input type="checkbox">
 						</td>
