--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -54,7 +54,7 @@
 			<dd class="exercise-info-deadline">{{ exercise.course_module.closing_time }}</dd>
 
 			{% if cached_points.personal_deadline %}
-			<dt>{% translate "EXTENDED_DEADLINE" %}</dt>
+			<dt>{% translate "PERSONAL_EXTENDED_DEADLINE" %}</dt>
 			<dd class="exercise-info-extended-deadline">
 				{{ cached_points.personal_deadline }}
 				{% if module.late_submission_penalty > 0 and cached_points.personal_deadline_has_penalty %}
