Chapter may be set as a model answer to course modules
Add a new feature that enables controlling chapter visibility to
students based on the completion of a course module.
There are multiple alternative rules for revealing the chapter
since the feature uses the same "reveal rules" feature that has
previously been developed for the visibility of
assignment model solutions and submission feedback.

Fixes #1098

--- a/exercise/templates/exercise/_children.html
+++ b/exercise/templates/exercise/_children.html
@@ -10,7 +10,7 @@
 		{% endif %}
 	{% elif entry|is_listed %}
 		<li>
-		{% if accessible and not entry.submittable or exercise_accessible %}
+		{% if accessible and not entry.submittable and entry.is_revealed or exercise_accessible and entry.is_revealed %}
 			{% if entry.is_empty %}
 				{{ entry.name|parse_localization }}
 			{% else %}
