Add group sizes to views for optimization
Allows selecting whether the group sizes are taken from the cached
points or content. In essence, this means that we can avoid loading
cached content on the course instance page.

--- a/course/templates/course/groups.html
+++ b/course/templates/course/groups.html
@@ -15,8 +15,7 @@
 
 {% block columns %}
 <div class="col-md-7">
-  {% max_group_size as max_size %}
-  {% if max_size > 1 %}
+  {% if instance_max_group_size > 1 %}
 
   <div class="alert alert-info">
     {% translate "[STAFF_HAS_NONE]" as staff_code %}
