Add group sizes to views for optimization
Allows selecting whether the group sizes are taken from the cached
points or content. In essence, this means that we can avoid loading
cached content on the course instance page.

--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -87,8 +87,7 @@
 	</a>
 </li>
 
-{% max_group_size as max_group %}
-{% if max_group > 1 %}
+{% if instance_max_group_size > 1 %}
 <li class="menu-groups">
 	<a href="{{ instance|url:'groups' }}">
 		<span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
