Improve and remove duplicate connection error strings
Fixes #1244

--- a/exercise/templates/exercise/_submit_progress.html
+++ b/exercise/templates/exercise/_submit_progress.html
@@ -8,7 +8,5 @@
 </div>
 
 <div class="quiz-submit-error alert alert-danger hide">
-	{% blocktranslate trimmed %}
-		SUBMISSION_ERROR_ALERT_COMMUNICATION_ERROR_W_SERVICE
-	{% endblocktranslate %}
+	{% translate "EXERCISE_ERROR_COMMUNICATION" %}
 </div>
