Enable navigation between pages also with LTI
The HTML templates in LTI Tool implementation did not show the
navigation links to previous and next page. Now they are visible again.

Closes #1239

--- a/lti_tool/templates/lti_tool/lti_course.html
+++ b/lti_tool/templates/lti_tool/lti_course.html
@@ -23,7 +23,7 @@
 </div>
 
 <ul class="toc">
-	{% for module in content.data.modules %}
+	{% for module in modules %}
 	{% if module|is_listed %}
 	{% module_accessible module as accessible %}
 	{% exercise_accessible module as exercise_accessible %}
