Load long feedback and submission/template/model files in chunks
Loading extremely long submission/template/model files and feedback
was made faster in #1260 by omitting the line numbers if the data
was longer than 5000 lines.

The performance is now improved even more by utilizing document
fragments and chunked loading, where the user can press a button
to load the next 5000 lines (with line numbers always included).

This fixes a potential 'Out of memory' browser error.

--- a/assets/sass/pages/_assessment.scss
+++ b/assets/sass/pages/_assessment.scss
@@ -42,9 +42,19 @@
 		padding-bottom: 0;
 	}
 
+	.submission-container {
+		margin-top: 6px;
+		.submitted-file-data > div > button {
+			margin-bottom: 10px;
+		}
+	}
+
 	.grader-container {
 		--sticky-top: 0;
 		flex-grow: 1;
+		.grader-tab > div > button {
+			margin-bottom: 10px;
+		}
 		.grader-tab.sticky {
 			// The assessment bar can change its size because of the resizable
 			// textarea, but the stickied grader feedback should never be obscured
