Add scroll separately button for submitted files on inspect page
The grader feedback already had a 'Scroll separately' button,
and it is now also added for the submitted files.

Fixes #1111
Closes #1172

--- a/assets/sass/pages/_assessment.scss
+++ b/assets/sass/pages/_assessment.scss
@@ -1,3 +1,5 @@
+@import "../mixins/sticky_submission_scroll";
+
 .assessment-panel {
 	& > .panel-heading {
 		position: sticky;
@@ -43,9 +45,14 @@
 	}
 
 	.submission-container {
+		--sticky-top: 0;
+		flex-grow: 1;
 		margin-top: 6px;
 		.submitted-file-data > div > button {
 			margin-bottom: 10px;
+		}
+		.submitted-file.sticky > div {
+			@include sticky-submission-scroll;
 		}
 	}
 
@@ -56,16 +63,10 @@
 			margin-bottom: 10px;
 		}
 		.grader-tab.sticky {
-			// The assessment bar can change its size because of the resizable
-			// textarea, but the stickied grader feedback should never be obscured
-			// by it. Hence the --sticky-top variable, which is updated in
-			// Javascript with a ResizeObserver.
-			position: sticky;
-			top: calc(5px + var(--sticky-top, 0));
-			& > div {
-				max-height: calc(100vh - var(--sticky-top, 0));
-				display: flex;
-				flex-direction: column;
+			@include sticky-submission-scroll;
+			.grader-html-output {
+				overflow: auto;
+				margin-bottom: 12px;
 			}
 		}
 	}
