LTI Tool v1.3: add the module's name to the module index page

--- a/lti_tool/templates/lti_tool/lti_module.html
+++ b/lti_tool/templates/lti_tool/lti_module.html
@@ -16,6 +16,7 @@
 {% endblock %}
 
 {% block coursecontent %}
+	<h1>{{ current.name|parse_localization }}</h1>
 	<p>
 		<span class="small">
 			{{ current.opening_time }}
