Redirect to previous page when cancelling new deadline deviation
Previously, the cancel button always sent the user to
the deadline deviation list page. Now, it sends the user
to the page where they came from, if possible.

Fixes #1278

--- a/exercise/templates/exercise/staff/_deviationslink.html
+++ b/exercise/templates/exercise/staff/_deviationslink.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load course %}
-<a class="aplus-button--secondary aplus-button--xs" href="{{ instance|url:'deviations-add-dl' }}?module={{module.id}}&exercise={{exercise.id}}&submitter={{submitters}}">
+<a class="deviations-link aplus-button--secondary aplus-button--xs" href="{{ instance|url:'deviations-add-dl' }}?module={{module.id}}&exercise={{exercise.id}}&submitter={{submitters}}">
 	<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 	{% translate "ADD_DEADLINE_DEVIATIONS" %}
 </a>
