--- a/assets/sass/components/_menu-notification.scss
+++ b/assets/sass/components/_menu-notification.scss
@@ -6,11 +6,75 @@
 		position: absolute;
 		left: 28px;
 		top: 15px;
+		-webkit-animation: bounce 2s 5 ease-in alternate;
+		-moz-animation: bounce 2s 5 ease-in alternate;
+		-o-animation: bounce 2s 5 ease-in alternate;
+		animation: bounce 2s 5 ease-in alternate;
 	}
 	@media (max-width: 768px) {
 		&.open > ul.dropdown-menu > li > a.page-modal {
 			color: #dadada;
 		}
+	}
+}
+@-webkit-keyframes bounce {
+	0%,
+	20%,
+	50%,
+	80%,
+	100% {
+		transform: translateY(0);
+	}
+	40% {
+		transform: translateY(-15px);
+	}
+	60% {
+		transform: translateY(-15px);
+	}
+}
+@-moz-keyframes bounce {
+	0%,
+	20%,
+	50%,
+	80%,
+	100% {
+		transform: translateY(0);
+	}
+	40% {
+		transform: translateY(-15px);
+	}
+	60% {
+		transform: translateY(-15px);
+	}
+}
+@-o-keyframes bounce {
+	0%,
+	20%,
+	50%,
+	80%,
+	100% {
+		transform: translateY(0);
+	}
+	40% {
+		transform: translateY(-15px);
+	}
+	60% {
+		transform: translateY(-15px);
+	}
+}
+@keyframes bounce {
+	0%,
+	20%,
+	50%,
+	80%,
+	100% {
+		transform: translateY(0);
+	}
+	40% {
+		transform: translateY(-15px);
+	}
+	60% {
+		transform: translateY(-15px);
 	}
 }
 /* for navbar-fixed-top: body {
