Add most-recent first sorting in deadline and submission deviations
The default sorting in deadline/submission deviation tables is now
most-recent first (descending). The ordering can also be toggled to
be ascending.

Fixes #1279

--- a/deviations/templates/deviations/list_dl.html
+++ b/deviations/templates/deviations/list_dl.html
@@ -33,7 +33,7 @@
 			<div class="panel-heading">
 				<h3 class="panel-title">{% translate "DEADLINE_DEVIATIONS" %}</h3>
 			</div>
-			<table class="table table-striped table-bordered table-condensed filtered-table ordered-table grouped-table">
+			<table class="table table-striped table-bordered table-condensed filtered-table ordered-table grouped-table" data-default-sort-column="6" data-default-sort-order="desc">
 				<thead>
 					<tr>
 						<th>{% translate "SUBMITTER" %}</th>
