--- a/deviations/templates/deviations/list_submissions.html
+++ b/deviations/templates/deviations/list_submissions.html
@@ -33,7 +33,7 @@
 			<div class="panel-heading">
 				<h3 class="panel-title">{% translate "SUBMISSION_DEVIATIONS" %}</h3>
 			</div>
-			<table class="table table-striped table-bordered table-condensed filtered-table ordered-table grouped-table">
+			<table class="table table-striped table-bordered table-condensed filtered-table ordered-table grouped-table" data-default-sort-column="4" data-default-sort-order="desc">
 				<thead>
 					<tr>
 						<th>{% translate "SUBMITTER" %}</th>
