Fix points page layout on slim screens
The course module tables no longer overflow
from the container element on slim screens.

Fixes #1314

--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -193,6 +193,7 @@ iframe {
 /* panels */
 .module-panel .panel-heading {
     display: block;
+    overflow: auto;
 }
 .module-panel .panel-title .caret {
     margin-right: 0.5em;
@@ -204,6 +205,18 @@ iframe {
 }
 .module-panel table {
     margin: 0;
+}
+@media (max-width: $screen-xs-max) {
+    .module-panel .panel-heading {
+        padding-bottom: 5px;
+    }
+    .module-panel .panel-title .badge {
+        text-wrap: wrap;
+        margin-bottom: 5px;
+    }
+    .module-panel .panel-title .module-name {
+        display: inline-block;
+    }
 }
 
 /* point progress */
