Fix long menu item URLs causing a horizontal scroll bar
Fixes #1312

--- a/external_services/templates/external_services/list_menu.html
+++ b/external_services/templates/external_services/list_menu.html
@@ -45,7 +45,7 @@
 			{{ menu.service.menu_label|parse_localization}}
 			{% endif %}
 		</td>
-		<td>
+		<td class="long-url">
 			{{ menu.final_url }}
 		</td>
 		<td>
