--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -77,6 +77,7 @@ $font-size-base:  $aplus-font-size-base;
 @import 'components/table';
 @import 'pages/assessment';
 @import 'pages/login';
+@import 'pages/menu-items';
 @import 'pages/profile-page';
 
 /*!
