--- a/exercise/templates/exercise/_points_badge.html
+++ b/exercise/templates/exercise/_points_badge.html
@@ -9,7 +9,13 @@
 {% if submitted %}
 <span class="badge{% if graded and official %} badge-{% if full_score %}success{% elif passed %}warning{% else %}danger{% endif %}{% endif %} {{ classes }}">
   {% if not official %}
-    {% translate "UNOFFICIAL_DESCRIPTION" %}
+    {% if unofficial_submission_type == 'limit_exceeded' %}
+      {% translate "LIMIT_EXCEEDED" %}
+    {% elif unofficial_submission_type == 'deadline_passed' %}
+      {% translate "DEADLINE_PASSED" %}
+    {% else %}
+      {% translate "UNOFFICIAL_DESCRIPTION" %}
+    {% endif %}
   {% elif passed %}
     {% translate "ACCEPTED" %}
   {% elif graded %}
@@ -34,7 +40,7 @@
 {% endif %}
 <span class="badge{% if submitted and official %} {% if feedback_revealed %}{% if full_score %}badge-success{% elif passed %}badge-warning{% else %}badge-danger{% endif %}{% endif %}{% if unconfirmed %} unconfirmed-points{% endif %}{% endif %}{% if classes %} {{ classes }}{% endif %}"
         data-toggle="tooltip" data-placement="bottom"
-        title="{% if not feedback_revealed %}{{ feedback_hidden_description }}{% elif not official %}{% translate 'UNOFFICIAL_DESCRIPTION' %}{% elif passed %}{% if required > 0 %}{% translate 'PASSED' %}{% endif %}{% elif missing_points %}{% blocktranslate trimmed with points=required %}POINTS_REQUIRED_TO_PASS -- {{ points }}{% endblocktranslate %}{% elif submitted %}{% translate 'REQUIRED_EXERCISES_NOT_PASSED' %}{% endif %}">
+        title="{% if not feedback_revealed %}{{ feedback_hidden_description }}{% elif not official %}{% if unofficial_submission_type == 'limit_exceeded' %}{% translate 'LIMIT_EXCEEDED' %}{% elif unofficial_submission_type == 'deadline_passed' %}{% translate 'DEADLINE_PASSED' %}{% else %}{% translate 'UNOFFICIAL_DESCRIPTION' %}{% endif %}{% elif passed %}{% if required > 0 %}{% translate 'PASSED' %}{% endif %}{% elif missing_points %}{% blocktranslate trimmed with points=required %}POINTS_REQUIRED_TO_PASS -- {{ points }}{% endblocktranslate %}{% elif submitted %}{% translate 'REQUIRED_EXERCISES_NOT_PASSED' %}{% endif %}">
 		{{ formatted_points }} / {{ max }}
 </span>
 {% endif %}
