--- a/assets/sass/components/_sidebar.scss
+++ b/assets/sass/components/_sidebar.scss
@@ -22,14 +22,15 @@
 .course-sidebar-collapser {
 	span {
 		margin: 0;
+		line-height: 18px;
 		color: #54595d;
 	}
 }
 
 .course-sidebar-button {
 	span {
-		width: 20px;
-		height: 20px;
+		width: 22px;
+		height: 22px;
 		font-size: 14px;
 	}
 	margin-left: 5px;
