--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -43,7 +43,8 @@
 			data-toggle="dropdown" title="{% translate "CHANGE_LANGUAGE" %}"
 			aria-label="{% translate "CHANGE_LANGUAGE" %}" aria-haspopup="true" aria-expanded="false"
 		>
-			<span>{% translate "LANGUAGE" %}</span>
+			<img src="{% static 'images/uls.svg' %}" alt="">
+			<span>Language</span>
 		</button>
 		<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="lang-dropdown-desktop">
 			{% for language in instance.language|list_unselected %}
